fix: fixing swagger annotation
